# AdCreatives

./: .env.example  .gitignore  AGENTS.md  README.md  cli.py  hook_library.yaml  pyproject.toml  trending_formats.yaml
dashboard/: __init__.py  app.py
docs/: pipeline-rules.md  text-only-generation.md
generators/: composer.py  fal_client.py  higgsfield_client.py  image_generator.py  platform_adapter.py  product_analyzer.py  prompt_engine.py  pynk_text_client.py  pynk_text_filler.py  reference_analyzer.py  swipe_matcher.py  text_overlay.py
models/: __init__.py  avatar.py  brand.py  brief.py  library.py  loader.py  product.py  result.py  skills.py  style.py
scripts/: backfill_trending.py  hf_check_creds.py  import_cooper_templates.py  import_nanobana_prompts.py  import_ultimate_selected.py  import_youmind_selected.py  smoke_test_pynk_text.py  test_run_4_prompts.py  test_text_schema.py  update-adc.ps1
strategy/: ad_classifier.py  ad_remixer.py  angle_multiplier.py  apify_amazon.py  awareness_mapper.py  brand_enricher.py  brief_generator.py  competitive_context.py  competitor_research.py  cost_tracker.py  drive_cache.py  drive_client.py  exa_research.py  firecrawl_client.py  foreplay_browser_scraper.py  foreplay_client.py  foreplay_sync.py  gap_analyzer.py  llm.py  matrix.py  matrix_builder.py  naming.py  offers.py  pattern_learner.py  persona_portrait.py  personas.py  product_dive.py  psychology_profiler.py  reference_ads.py  researcher.py  reviews.py  status_dashboard.py  template_extractor.py  text_remapper.py  trending.py  voc_miner.py  voice.py
tests/: test_ad_remixer.py  test_angle_multiplier.py  (+7 more)
(+613 files in other folders)
